ci: add keploy tests
